<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/timestampLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timestamp_label"
        android:textColor="@color/grey"/>

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timestamp_value"
        android:textColor="@color/grey"
        android:layout_toEndOf="@id/timestampLabel"
        android:layout_alignTop="@id/timestampLabel"
        android:layout_alignBottom="@id/timestampLabel"/>

    <TextView
        android:id="@+id/imageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:layout_below="@id/timestampLabel"
        android:text="@string/image_label"/>
    
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/ic_launcher_background"
        android:layout_below="@id/imageLabel"/>

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:text="@string/location_label"
        android:textColor="@color/grey"/>

    <TextView
        android:id="@+id/latitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationLabel"
        android:text="@string/latitude_label"
        android:textColor="@color/grey"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude_value"
        android:textColor="@color/grey"
        android:layout_toEndOf="@id/latitudeLabel"
        android:layout_below="@id/locationLabel"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/longitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitudeLabel"
        android:text="@string/longitude_label"
        android:textColor="@color/grey"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude_value"
        android:textColor="@color/grey"
        android:layout_toEndOf="@id/longitudeLabel"
        android:layout_below="@id/latitudeLabel"
        android:layout_marginStart="5dp"/>

    <ImageView
        android:id="@+id/imageLove"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/heart_icon"
        android:layout_below="@id/image"
        android:layout_toEndOf="@id/longitude"
        android:layout_alignTop="@id/locationLabel"
        android:layout_alignBottom="@id/longitude"
        android:layout_marginStart="150dp"
        android:contentDescription="@string/set_as_favourite"
        android:layout_gravity="end"
        android:clickable="true" />

    <TextView
        android:id="@+id/cameraLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/longitudeLabel"
        android:text="@string/camera_id_label"
        android:textColor="@color/grey"/>

    <TextView
        android:id="@+id/cameraId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_id_value"
        android:textColor="@color/grey"
        android:layout_below="@id/longitudeLabel"
        android:layout_toEndOf="@id/cameraLabel"/>

    <TextView
        android:id="@+id/metadataLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cameraLabel"
        android:text="@string/image_metadata_label"
        android:textColor="@color/grey"/>

    <TextView
        android:id="@+id/heightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/metadataLabel"
        android:text="@string/height_label"
        android:textColor="@color/grey"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude_value"
        android:textColor="@color/grey"
        android:layout_toEndOf="@id/heightLabel"
        android:layout_below="@id/metadataLabel"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/widthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heightLabel"
        android:text="@string/width_label"
        android:textColor="@color/grey"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude_value"
        android:textColor="@color/grey"
        android:layout_toEndOf="@id/widthLabel"
        android:layout_below="@id/heightLabel"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/md5Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widthLabel"
        android:text="@string/md5_label"
        android:textColor="@color/grey"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/md5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/md5Label"
        android:text="@string/md5_label"
        android:textColor="@color/grey"
        android:layout_marginStart="10dp"/>

</RelativeLayout>