<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginPage"
    android:background="@color/white">

    <TextView
        android:id="@+id/hello"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/relativeLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="25dp"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="32sp"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/userNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:labelFor="@id/userName"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userNameLabel"
            android:minWidth="350dp"
            android:maxWidth="500dp"
            android:minHeight="48dp"
            android:inputType="text"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:background="@drawable/edit_text_border"
            android:autofillHints="username"
            android:textColorHint="@android:color/transparent" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_below="@id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:labelFor="@id/password"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordLabel"
            android:minWidth="350dp"
            android:maxWidth="500dp"
            android:minHeight="48dp"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:background="@drawable/edit_text_border"
            android:autofillHints="password"
            android:textColorHint="@android:color/transparent"/>

    </RelativeLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:paddingBottom="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/login"
        android:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        android:background="@drawable/rounded_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>